--- a/frontend/src/css/productList/sidebar.css
+++ b/frontend/src/css/productList/sidebar.css
@@ -351,8 +351,8 @@ details ul li input[type="checkbox"] {
 }
 
 details ul li input[type="checkbox"]:checked {
-  background-color: #4a5568;
-  border-color: #4a5568;
+  background-color: linear-gradient(135deg, #005ade 0%, #0d99ff 100%);
+
   box-shadow: 0 0 0 1px rgba(74, 85, 104, 0.2);
 }
 
